--- a/cloudcannon.config.yaml
+++ b/cloudcannon.config.yaml
@@ -1,8 +1,10 @@
 collections_config:
   pages:
+    path: 'content/pages'
     _enabled_editors:
       - visual
   blog:
+    path: 'content/posts'
     _enabled_editors:
       - content
       - visual
