--- a/component-library/components/home/hero/hero.bookshop.yml
+++ b/component-library/components/home/hero/hero.bookshop.yml
@@ -9,16 +9,18 @@ spec:
 
 # Defines the structure of this component, as well as the default values
 blueprint:
-  title: Beautiful email campaigns
-  description: With Sendit, you can quickly create beautiful rich emails that capture a reader’s attention, engage them, and convert them into customers.
-  image_path: /images/hero/hero-image-2.png
-  link:
-    text: "Try Free"
-    url: "/sign-up"
+  title: Email Marketing is Future for Grow Your Business Revenues
+  description: We believe that a good email marketing strategy is the key to growth. So we’re helping you grow your business with tools and resources that make email marketing easy.
+  image: /images/hero/hero-image-2.png
+  image_alt: Dashboard with reports
+  button:
+    text: Try This Free
+    url: /signup
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
 
-
 # Any extra CloudCannon inputs configuration to apply to the blueprint
-_inputs: {}
+_inputs:
+  description:
+    type: markdown
