--- a/component-library/components/contact/hero/hero.bookshop.yml
+++ b/component-library/components/contact/hero/hero.bookshop.yml
@@ -2,18 +2,21 @@
 spec:
   structures:
     - content_blocks
-  label: Pricing Hero
-  description: Pricing Hero section
-  icon: "credit_card"
+  label: Contact Hero
+  description: Contact Hero section
+  icon: "contact_support"
   tags: ["hero"]
 
 # Defines the structure of this component, as well as the default values
 blueprint:
-  title: A plan for everyone
-  description: Sendit is easy to get started and we have a pricing plan for businesses of all sizes.
+  title: Let&#39;s talk.
+  description: We take our commitment to our users seriously. Have a question or
+    suggestion? Feel free to drop us a message!
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
 
 # Any extra CloudCannon inputs configuration to apply to the blueprint
-_inputs: {}
+_inputs:
+  description:
+    type: markdown
