--- a/component-library/components/global/error/error.bookshop.yml
+++ b/component-library/components/global/error/error.bookshop.yml
@@ -2,21 +2,21 @@
 spec:
   structures:
     - content_blocks
-  label: About Team
-  description: About Team section
-  icon: "groups"
+  label: Error
+  description: "404"
+  icon: "error"
   tags: []
 
 # Defines the structure of this component, as well as the default values
 blueprint:
-  title: Our leadership
-  team_members:
-    - name: Pete Fish
-      designation: Co-Founder & CEO
-      image_path: /images/team/1.jpg
+  description: "Something is wrong here!"
+  image: "/images/404/error.png"
+  image_alt: Error
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
 
 # Any extra CloudCannon inputs configuration to apply to the blueprint
-_inputs: {}
+_inputs:
+  description:
+    type: markdown
