--- a/component-library/components/global/header/header.bookshop.yml
+++ b/component-library/components/global/header/header.bookshop.yml
@@ -2,18 +2,22 @@
 spec:
   structures:
     - content_blocks
-  label: Hero
-  description: Hero section
-  icon: "lock"
-  tags: ["hero"]
+  label: Header
+  description: Header section
+  icon: "task"
+  tags: []
 
 # Defines the structure of this component, as well as the default values
 blueprint:
-  title: Terms & Condition
+  title: Sendit
+  title_suffix: Features
+  description: Sendit is the most complete solution to create beautiful email designs, manage mails and send them out at the best price.
+  remove_top_padding: false
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
 
-
 # Any extra CloudCannon inputs configuration to apply to the blueprint
-_inputs: {}
+_inputs:
+  description:
+    type: markdown
