--- a/component-library/components/pricing/hero/hero.bookshop.yml
+++ b/component-library/components/pricing/hero/hero.bookshop.yml
@@ -2,22 +2,19 @@
 spec:
   structures:
     - content_blocks
-  label: FAQ
-  description: FAQ section
-  icon: "checklist"
-  tags: []
+  label: Pricing Hero
+  description: Pricing Hero section
+  icon: "credit_card"
+  tags: ["hero"]
 
 # Defines the structure of this component, as well as the default values
 blueprint:
-  title: Have
-  title_suffix: Questions?
-  description: We’re always here to help. Here are the most frequently asked questions.
-  faq:
-    - title: Is there a maximum numbers of emails I can send each month?
-      description: No, the prices include unlimited emails. Send to your heart’s content.
+  title: Choose a plan that works best for you.
+  description: We believe that a good email marketing strategy is the key to growth. So we’re helping you grow your business with tools and resources that make email marketing easy.
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
+
 # Any extra CloudCannon inputs configuration to apply to the blueprint
 _inputs:
   description:
