--- a/component-library/components/privacy/hero/hero.bookshop.yml
+++ b/component-library/components/privacy/hero/hero.bookshop.yml
@@ -2,19 +2,17 @@
 spec:
   structures:
     - content_blocks
-  label: Contact Hero
-  description: Contact Hero section
-  icon: "contact_support"
+  label: Hero
+  description: Hero section
+  icon: "lock"
   tags: ["hero"]
 
 # Defines the structure of this component, as well as the default values
 blueprint:
-  title: Let's talk.
-  description: Have a question or suggestion? Feel free to drop us a message!
+  title: Terms & Condition
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
-
 
 # Any extra CloudCannon inputs configuration to apply to the blueprint
 _inputs: {}
