--- a/component-library/components/about/hero/hero.bookshop.yml
+++ b/component-library/components/about/hero/hero.bookshop.yml
@@ -31,7 +31,7 @@ preview:
 # Any extra CloudCannon inputs configuration to apply to the blueprint
 _inputs:
   description:
-    type: markdown
+    type: html
   placement:
     type: select
     options:
