Revert "Set bookshop component description as html"
This reverts commit 50780c1c807fa37390db87b93c57daf8f26cc457.

--- a/component-library/components/about/hero/hero.bookshop.yml
+++ b/component-library/components/about/hero/hero.bookshop.yml
@@ -31,7 +31,7 @@ preview:
 # Any extra CloudCannon inputs configuration to apply to the blueprint
 _inputs:
   description:
-    type: html
+    type: markdown
   placement:
     type: select
     options:
