Added configurable theme

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build && next export",
     "start": "next start",
+    "prebuild:fetch-theme-color": "node fetch-theme-color.js",
     "lint": "next lint"
   },
   "dependencies": {
