--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@cloudcannon/filer": "^0.0.2",
     "@cloudcannon/react-connector": "^2.0.0",
     "@googlemaps/js-api-loader": "^1.12.2",
+    "@makotot/ghostui": "^2.0.0",
     "eslint-config-next": "^13.0.4",
     "gray-matter": "^4.0.3",
     "luxon": "^3.1.0",
