--- a/component-library/components/home/hero/hero.bookshop.yml
+++ b/component-library/components/home/hero/hero.bookshop.yml
@@ -15,7 +15,7 @@ blueprint:
   image_alt: Dashboard with reports
   button:
     text: Try This Free
-    link: /signup
+    url: /signup
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
