--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "next start",
     "prebuild:fetch-theme-color": "node fetch-theme-color.js",
     "lint": "next lint"
@@ -18,7 +18,7 @@
     "gray-matter": "^4.0.3",
     "luxon": "^3.1.0",
     "markdown-it": "^12.2.0",
-    "next": "^13.0.4",
+    "next": "^13.4.2",
     "next-seo": "^5.14.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
